// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`build build fails on a nuclear OldActor edit that check-limit hides 1`] = `
{
  "exitCode": 1,
  "stderr": "migrations/20250101_000000.mo:0.1: type error [M0268], migration \`20250101_000000\` no longer matches the deployed history: it now has type
  {} -> {a : Nat; b : Text}
but the stable baseline records
  {x : Nat} -> {a : Nat; b : Text}
Build failed for canister backend (exit code: 1)",
  "stdout": "build canister backend
<CACHE><MOC> ["-c","--idl","--stable-types","-o",".mops/.build/backend.wasm","src/main.mo","--stable-baseline","deployed.most","--default-persistent-actors","--enhanced-migration=migrations","--public-metadata","candid:service","--public-metadata","candid:args"]",
}
`;

exports[`build error 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "build canister foo
<CACHE><MOC> ["-c","--idl","--stable-types","-o",".mops/.build/foo.wasm","src/Foo.mo","--package","core",".mops/core@1.0.0/src","--release","--public-metadata","candid:service","--public-metadata","candid:args"]
Stable types written to .mops/.build/foo.most
Adding metadata to .mops/.build/foo.wasm

✓ Built 1 canister successfully",
}
`;

exports[`build error 2`] = `
{
  "exitCode": 1,
  "stderr": "Candid compatibility check failed for canister bar",
  "stdout": "build canister bar",
}
`;

exports[`build error 3`] = `
{
  "exitCode": 1,
  "stderr": "Candid compatibility check failed for canister bar",
  "stdout": "build canister foo
build canister bar",
}
`;

exports[`build ok 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "build canister foo
<CACHE><MOC> ["-c","--idl","--stable-types","-o",".mops/.build/foo.wasm","src/Foo.mo","--package","core",".mops/core@1.0.0/src","--release","--public-metadata","candid:service","--public-metadata","candid:args"]
Stable types written to .mops/.build/foo.most
Adding metadata to .mops/.build/foo.wasm
build canister bar
<CACHE><MOC> ["-c","--idl","--stable-types","-o",".mops/.build/bar.wasm","src/Bar.mo","--package","core",".mops/core@1.0.0/src","--release","--incremental-gc","--public-metadata","candid:service","--public-metadata","candid:args"]
Stable types written to .mops/.build/bar.most
Candid compatibility check passed for canister bar
Adding metadata to .mops/.build/bar.wasm

✓ Built 2 canisters successfully",
}
`;

exports[`build ok 2`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "build canister foo

✓ Built 1 canister successfully",
}
`;

exports[`build ok 3`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "build canister bar

✓ Built 1 canister successfully",
}
`;

exports[`build ok 4`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "build canister foo
build canister bar

✓ Built 2 canisters successfully",
}
`;

exports[`build warns when args contain managed flags 1`] = `
{
  "exitCode": 1,
  "stderr": "Warning: '-o' in args for canister foo may conflict with mops build — use [build].outputDir in mops.toml or --output flag instead
Warning: '-c' in args for canister foo may conflict with mops build — this flag is always set by mops build
Warning: '--idl' in args for canister foo may conflict with mops build — this flag is always set by mops build
Warning: '--stable-types' in args for canister foo may conflict with mops build — this flag is always set by mops build
Error while compiling canister foo
ENOENT: no such file or directory, open '.mops/.build/foo.did'",
  "stdout": "build canister foo",
}
`;
